--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,10 +2,10 @@
     background-color: rgb(0, 0, 0);
     display: flex;
     align-items: center;
-    justify-content:space-evenly;
+    justify-content:space-between;
     height: 40%;
     width: 100%;
-    padding-bottom: 10px;
+    padding: 0% 5% 1% 5%;
 }
 
 .logoImage{
@@ -25,12 +25,12 @@
     text-decoration: none;
 }
 
-h2{
+.titleTeam{
     color: rgb(204, 101, 245);
     margin-left: -15%;
     margin-right: -10%;
     font-weight: bold;
     border-bottom: 5px solid blueviolet;
-    font-size: 180%;
+    font-size: 2vw;
 }
 
