--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,12 +1,13 @@
 .headerBackground{
     height: 100vh;
-    background-color: crimson;
+    background-color: rgb(73 21 39);
     background:url("https://media.gq.com.mx/photos/5f46c2044464f9b88fb25e99/master/w_3000,h_1688,c_limit/evangelion-neon-genesis.jpg");
 }
 
 
 .textoHeader{
     color: rgb(130, 168, 238);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     font-size: 200%;
     margin-right: 50%;
@@ -15,14 +16,16 @@
 }
 
 .textoClass{
-    text-align: justify;
+    text-align: center;
+    margin-bottom: 4%;
 }
 
 .imgPilotos{
-    margin-left: 50%;
-    border-radius: 80px;
-    margin-top: 0%;
-    width: 100%;
+    margin-left: 55%;
+    border-radius: 95px;
+    margin-bottom: 166%;
+    margin-top: -20%;
+    width: 35%;
     height: auto;
-
+    border: 5px black;
 }
