--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -14,4 +14,6 @@
     background:rgb(130, 168, 238);
     border: 3px  blueviolet solid !important;
     border-radius: 0;
+    height: 200px;
+    max-height: 200px;
 }
