--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -10,9 +10,37 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     font-size: 200%;
-    margin-right: 50%;
-    margin-top: 10%;
-    margin-left: 5%;
+    padding: 2rem;
+}
+
+
+
+.tituloFront{
+    color:rgb(156, 156, 190);
+    font-size: 120%;
+    text-align: center;
+    font-weight: bold;
+}
+
+.tituloBack{
+    color:rgb(156, 156, 190);
+    font-size: 120%;
+    text-align: center;
+    font-weight: bold;
+}
+
+.textoFront{
+    color: rgb(105, 148, 228);
+    font-size: 78%;
+    text-align: justify;
+    font-weight: bold;
+}
+
+.textoBack{
+    color: rgb(105, 148, 228);
+    font-size: 78%;
+    text-align: justify;
+    font-weight: bold;
 }
 
 .textoClass{
@@ -20,11 +48,26 @@
     margin-bottom: 4%;
 }
 
+.Img_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+}
+
 .imgPilotos{
-    margin-left: 55%;
-    border-radius: 95px;
-    margin-bottom: 166%;
-    margin-top: -20%;
+    border-radius: 95px;   
+    width: 90%;
+    height: auto;
+    border: 5px black;
+    align-self: center;
+}
+
+.imgNerv{
+    margin-right: 55%;
+    border-radius: 80px;
+    margin-top: 166%;
+    margin-bottom: -20%;
     width: 35%;
     height: auto;
     border: 5px black;
