--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -7,3 +7,17 @@ input, textarea {
     border: 2px ridge steelblue !important;
     background: transparent;
 }
+
+form {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.email {
+    margin-top: 2em;
+}
+
+.btnForm {
+    width: 10%;
+    margin-top: 1em;
+}
