--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,9 +2,11 @@
     background-color: rgb(0, 0, 0);
     display: flex;
     align-items: center;
-    justify-content:space-between;
-    height: 40%;
+    justify-content: space-between;
+    height: auto;
+    z-index: 1;
     width: 100%;
+    position: fixed;
     padding: 0% 5% 1% 5%;
 }
 
