--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -15,4 +15,14 @@
     border: 3px  blueviolet solid !important;
     border-radius: 0;
     min-height: 200px;
+    animation: party 3s ease-in-out;
 }
+
+@keyframes party {
+    0%    { opacity: 0; }
+    20%   { opacity: 1; }
+    80%   { opacity: 0; }
+    100%  { opacity: 1; }
+  }
+
+  
